[package]
name = "random-icon-lib"
version = "0.1.10"
edition = "2024"
description = "Generates a random icon from a template."
keywords = ["symbol", "icon", "random", "hash", "indenticon"]
categories = ["encoding"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/fantacell/random-icon"

[features]
default = ["rand"]
rand = ["dep:rand"]

[dependencies]
svg = "0.18.0"
rand = { version = "0.9.0", optional = true }
